Spin/Src6.4.7/y.output
   0  $accept : program $end

   1  program : units

   2  units : unit
   3        | units unit

   4  unit : proc
   5       | init
   6       | claim
   7       | ltl
   8       | events
   9       | one_decl
  10       | utype
  11       | c_fcts
  12       | ns
  13       | semi
  14       | error

  15  l_par : '('

  16  r_par : ')'

  17  $$1 :

  18  $$2 :

  19  proc : inst proctype NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body

  20  proctype : PROCTYPE
  21           | D_PROCTYPE

  22  inst :
  23       | ACTIVE
  24       | ACTIVE '[' const_expr ']'
  25       | ACTIVE '[' NAME ']'

  26  $$3 :

  27  init : INIT $$3 Opt_priority body

  28  $$4 :

  29  ltl : LTL optname2 $$4 ltl_body

  30  ltl_body : '{' full_expr OS '}'
  31           | error

  32  $$5 :

  33  claim : CLAIM optname $$5 body

  34  optname :
  35          | NAME

  36  optname2 :
  37           | NAME

  38  $$6 :

  39  events : TRACE $$6 body

  40  $$7 :

  41  utype : TYPEDEF NAME '{' $$7 decl_lst '}'

  42  nm : NAME
  43     | INAME

  44  $$8 :

  45  ns : INLINE nm l_par $$8 args r_par

  46  c_fcts : ccode
  47         | cstate

  48  cstate : C_STATE STRING STRING
  49         | C_TRACK STRING STRING
  50         | C_STATE STRING STRING STRING
  51         | C_TRACK STRING STRING STRING

  52  ccode : C_CODE
  53        | C_DECL

  54  cexpr : C_EXPR

  55  $$9 :

  56  $$10 :

  57  body : '{' $$9 sequence OS $$10 '}'

  58  sequence : step
  59           | sequence MS step

  60  step : one_decl
  61       | XU vref_lst
  62       | NAME ':' one_decl
  63       | NAME ':' XU
  64       | stmnt

  65  $$11 :

  66  step : stmnt UNLESS $$11 stmnt
  67       | error

  68  vis :
  69      | HIDDEN
  70      | SHOW
  71      | ISLOCAL

  72  asgn :
  73       | ASGN

  74  one_decl : vis TYPE var_list
  75           | vis UNAME var_list
  76           | vis TYPE asgn '{' nlst '}'

  77  decl_lst : one_decl
  78           | one_decl SEMI decl_lst

  79  decl :
  80       | decl_lst

  81  vref_lst : varref
  82           | varref ',' vref_lst

  83  var_list : ivar
  84           | ivar ',' var_list

  85  c_list : CONST
  86         | CONST ',' c_list

  87  ivar : vardcl
  88       | vardcl ASGN '{' c_list '}'
  89       | vardcl ASGN expr
  90       | vardcl ASGN ch_init

  91  ch_init : '[' const_expr ']' OF '{' typ_list '}'

  92  vardcl : NAME
  93         | NAME ':' CONST
  94         | NAME '[' const_expr ']'
  95         | NAME '[' NAME ']'

  96  varref : cmpnd

  97  pfld : NAME

  98  $$12 :

  99  pfld : NAME $$12 '[' expr ']'

 100  $$13 :

 101  cmpnd : pfld $$13 sfld

 102  sfld :
 103       | '.' cmpnd

 104  stmnt : Special
 105        | Stmnt

 106  $$14 :

 107  for_pre : FOR l_par $$14 varref

 108  for_post : '{' sequence OS '}'

 109  $$15 :

 110  Special : varref RCV $$15 rargs

 111  $$16 :

 112  Special : varref SND $$16 margs

 113  $$17 :

 114  Special : for_pre ':' expr DOTDOT expr r_par $$17 for_post

 115  $$18 :

 116  Special : for_pre IN varref r_par $$18 for_post
 117          | SELECT l_par varref ':' expr DOTDOT expr r_par
 118          | IF options FI

 119  $$19 :

 120  Special : DO $$19 options OD
 121          | BREAK
 122          | GOTO NAME
 123          | NAME ':' stmnt
 124          | NAME ':'
 125          | error

 126  Stmnt : varref ASGN full_expr
 127        | varref INCR
 128        | varref DECR
 129        | SET_P l_par two_args r_par

 130  $$20 :

 131  Stmnt : PRINT l_par STRING $$20 prargs r_par
 132        | PRINTM l_par varref r_par
 133        | PRINTM l_par CONST r_par
 134        | ASSERT full_expr
 135        | ccode

 136  $$21 :

 137  Stmnt : varref R_RCV $$21 rargs

 138  $$22 :

 139  Stmnt : varref RCV $$22 LT rargs GT

 140  $$23 :

 141  Stmnt : varref R_RCV $$23 LT rargs GT

 142  $$24 :

 143  Stmnt : varref O_SND $$24 margs
 144        | full_expr
 145        | ELSE

 146  $$25 :

 147  Stmnt : ATOMIC '{' $$25 sequence OS '}'

 148  $$26 :

 149  Stmnt : D_STEP '{' $$26 sequence OS '}'

 150  $$27 :

 151  Stmnt : '{' $$27 sequence OS '}'

 152  $$28 :

 153  $$29 :

 154  Stmnt : INAME $$28 l_par args r_par $$29 Stmnt

 155  $$30 :

 156  $$31 :

 157  Stmnt : varref ASGN INAME $$30 l_par args r_par $$31 Stmnt
 158        | RETURN full_expr

 159  options : option
 160          | option options

 161  $$32 :

 162  option : SEP $$32 sequence OS

 163  OS :
 164     | semi

 165  semi : SEMI
 166       | ARROW

 167  MS : semi
 168     | MS semi

 169  aname : NAME
 170        | PNAME

 171  const_expr : CONST
 172             | '-' const_expr
 173             | l_par const_expr r_par
 174             | const_expr '+' const_expr
 175             | const_expr '-' const_expr
 176             | const_expr '*' const_expr
 177             | const_expr '/' const_expr
 178             | const_expr '%' const_expr

 179  expr : l_par expr r_par
 180       | expr '+' expr
 181       | expr '-' expr
 182       | expr '*' expr
 183       | expr '/' expr
 184       | expr '%' expr
 185       | expr '&' expr
 186       | expr '^' expr
 187       | expr '|' expr
 188       | expr GT expr
 189       | expr LT expr
 190       | expr GE expr
 191       | expr LE expr
 192       | expr EQ expr
 193       | expr NE expr
 194       | expr AND expr
 195       | expr OR expr
 196       | expr LSHIFT expr
 197       | expr RSHIFT expr
 198       | '~' expr
 199       | '-' expr
 200       | SND expr
 201       | l_par expr ARROW expr ':' expr r_par

 202  $$33 :

 203  expr : RUN aname $$33 l_par args r_par Opt_priority
 204       | LEN l_par varref r_par
 205       | ENABLED l_par expr r_par
 206       | GET_P l_par expr r_par

 207  $$34 :

 208  expr : varref RCV $$34 '[' rargs ']'

 209  $$35 :

 210  expr : varref R_RCV $$35 '[' rargs ']'
 211       | varref
 212       | cexpr
 213       | CONST
 214       | TIMEOUT
 215       | NONPROGRESS
 216       | PC_VAL l_par expr r_par
 217       | PNAME '[' expr ']' '@' NAME
 218       | PNAME '[' expr ']' ':' pfld
 219       | PNAME '@' NAME
 220       | PNAME ':' pfld
 221       | ltl_expr

 222  Opt_priority :
 223               | PRIORITY CONST

 224  full_expr : expr
 225            | Expr

 226  ltl_expr : expr UNTIL expr
 227           | expr RELEASE expr
 228           | expr WEAK_UNTIL expr
 229           | expr IMPLIES expr
 230           | expr EQUIV expr
 231           | NEXT expr
 232           | ALWAYS expr
 233           | EVENTUALLY expr

 234  Expr : Probe
 235       | l_par Expr r_par
 236       | Expr AND Expr
 237       | Expr AND expr
 238       | expr AND Expr
 239       | Expr OR Expr
 240       | Expr OR expr
 241       | expr OR Expr

 242  Probe : FULL l_par varref r_par
 243        | NFULL l_par varref r_par
 244        | EMPTY l_par varref r_par
 245        | NEMPTY l_par varref r_par

 246  Opt_enabler :
 247              | PROVIDED l_par full_expr r_par
 248              | PROVIDED error

 249  basetype : TYPE
 250           | UNAME
 251           | error

 252  typ_list : basetype
 253           | basetype ',' typ_list

 254  two_args : expr ',' expr

 255  args :
 256       | arg

 257  prargs :
 258         | ',' arg

 259  margs : arg
 260        | expr l_par arg r_par

 261  arg : expr
 262      | expr ',' arg

 263  rarg : varref
 264       | EVAL l_par expr r_par
 265       | CONST
 266       | '-' CONST

 267  rargs : rarg
 268        | rarg ',' rargs
 269        | rarg l_par rargs r_par
 270        | l_par rargs r_par

 271  nlst : NAME
 272       | nlst NAME
 273       | nlst ','

state 0
	$accept : . program $end  (0)
	inst : .  (22)
	vis : .  (68)

	error  shift 1
	C_CODE  shift 2
	C_DECL  shift 3
	C_STATE  shift 4
	C_TRACK  shift 5
	TYPEDEF  shift 6
	INLINE  shift 7
	SEMI  shift 8
	ARROW  shift 9
	ACTIVE  shift 10
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	CLAIM  shift 14
	TRACE  shift 15
	INIT  shift 16
	LTL  shift 17
	PROCTYPE  reduce 22
	D_PROCTYPE  reduce 22
	TYPE  reduce 68
	UNAME  reduce 68

	program  goto 18
	units  goto 19
	unit  goto 20
	proc  goto 21
	init  goto 22
	claim  goto 23
	ltl  goto 24
	events  goto 25
	one_decl  goto 26
	utype  goto 27
	c_fcts  goto 28
	ns  goto 29
	semi  goto 30
	inst  goto 31
	ccode  goto 32
	cstate  goto 33
	vis  goto 34


state 1
	unit : error .  (14)

	.  reduce 14


state 2
	ccode : C_CODE .  (52)

	.  reduce 52


state 3
	ccode : C_DECL .  (53)

	.  reduce 53


state 4
	cstate : C_STATE . STRING STRING  (48)
	cstate : C_STATE . STRING STRING STRING  (50)

	STRING  shift 35
	.  error


state 5
	cstate : C_TRACK . STRING STRING  (49)
	cstate : C_TRACK . STRING STRING STRING  (51)

	STRING  shift 36
	.  error


state 6
	utype : TYPEDEF . NAME '{' $$7 decl_lst '}'  (41)

	NAME  shift 37
	.  error


state 7
	ns : INLINE . nm l_par $$8 args r_par  (45)

	NAME  shift 38
	INAME  shift 39
	.  error

	nm  goto 40


state 8
	semi : SEMI .  (165)

	.  reduce 165


state 9
	semi : ARROW .  (166)

	.  reduce 166


state 10
	inst : ACTIVE .  (23)
	inst : ACTIVE . '[' const_expr ']'  (24)
	inst : ACTIVE . '[' NAME ']'  (25)

	'['  shift 41
	PROCTYPE  reduce 23
	D_PROCTYPE  reduce 23


state 11
	vis : HIDDEN .  (69)

	.  reduce 69


state 12
	vis : SHOW .  (70)

	.  reduce 70


state 13
	vis : ISLOCAL .  (71)

	.  reduce 71


state 14
	claim : CLAIM . optname $$5 body  (33)
	optname : .  (34)

	NAME  shift 42
	'{'  reduce 34

	optname  goto 43


state 15
	events : TRACE . $$6 body  (39)
	$$6 : .  (38)

	.  reduce 38

	$$6  goto 44


state 16
	init : INIT . $$3 Opt_priority body  (27)
	$$3 : .  (26)

	.  reduce 26

	$$3  goto 45


state 17
	ltl : LTL . optname2 $$4 ltl_body  (29)
	optname2 : .  (36)

	NAME  shift 46
	error  reduce 36
	'{'  reduce 36

	optname2  goto 47


state 18
	$accept : program . $end  (0)

	$end  accept


state 19
	program : units .  (1)
	units : units . unit  (3)
	inst : .  (22)
	vis : .  (68)

	error  shift 1
	C_CODE  shift 2
	C_DECL  shift 3
	C_STATE  shift 4
	C_TRACK  shift 5
	TYPEDEF  shift 6
	INLINE  shift 7
	SEMI  shift 8
	ARROW  shift 9
	ACTIVE  shift 10
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	CLAIM  shift 14
	TRACE  shift 15
	INIT  shift 16
	LTL  shift 17
	$end  reduce 1
	PROCTYPE  reduce 22
	D_PROCTYPE  reduce 22
	TYPE  reduce 68
	UNAME  reduce 68

	unit  goto 48
	proc  goto 21
	init  goto 22
	claim  goto 23
	ltl  goto 24
	events  goto 25
	one_decl  goto 26
	utype  goto 27
	c_fcts  goto 28
	ns  goto 29
	semi  goto 30
	inst  goto 31
	ccode  goto 32
	cstate  goto 33
	vis  goto 34


state 20
	units : unit .  (2)

	.  reduce 2


state 21
	unit : proc .  (4)

	.  reduce 4


state 22
	unit : init .  (5)

	.  reduce 5


state 23
	unit : claim .  (6)

	.  reduce 6


state 24
	unit : ltl .  (7)

	.  reduce 7


state 25
	unit : events .  (8)

	.  reduce 8


state 26
	unit : one_decl .  (9)

	.  reduce 9


state 27
	unit : utype .  (10)

	.  reduce 10


state 28
	unit : c_fcts .  (11)

	.  reduce 11


state 29
	unit : ns .  (12)

	.  reduce 12


state 30
	unit : semi .  (13)

	.  reduce 13


state 31
	proc : inst . proctype NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	PROCTYPE  shift 49
	D_PROCTYPE  shift 50
	.  error

	proctype  goto 51


state 32
	c_fcts : ccode .  (46)

	.  reduce 46


state 33
	c_fcts : cstate .  (47)

	.  reduce 47


state 34
	one_decl : vis . TYPE var_list  (74)
	one_decl : vis . UNAME var_list  (75)
	one_decl : vis . TYPE asgn '{' nlst '}'  (76)

	TYPE  shift 52
	UNAME  shift 53
	.  error


state 35
	cstate : C_STATE STRING . STRING  (48)
	cstate : C_STATE STRING . STRING STRING  (50)

	STRING  shift 54
	.  error


state 36
	cstate : C_TRACK STRING . STRING  (49)
	cstate : C_TRACK STRING . STRING STRING  (51)

	STRING  shift 55
	.  error


state 37
	utype : TYPEDEF NAME . '{' $$7 decl_lst '}'  (41)

	'{'  shift 56
	.  error


state 38
	nm : NAME .  (42)

	.  reduce 42


state 39
	nm : INAME .  (43)

	.  reduce 43


state 40
	ns : INLINE nm . l_par $$8 args r_par  (45)

	'('  shift 57
	.  error

	l_par  goto 58


state 41
	inst : ACTIVE '[' . const_expr ']'  (24)
	inst : ACTIVE '[' . NAME ']'  (25)

	CONST  shift 59
	NAME  shift 60
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 63


state 42
	optname : NAME .  (35)

	.  reduce 35


state 43
	claim : CLAIM optname . $$5 body  (33)
	$$5 : .  (32)

	.  reduce 32

	$$5  goto 64


state 44
	events : TRACE $$6 . body  (39)

	'{'  shift 65
	.  error

	body  goto 66


state 45
	init : INIT $$3 . Opt_priority body  (27)
	Opt_priority : .  (222)

	PRIORITY  shift 67
	'{'  reduce 222

	Opt_priority  goto 68


state 46
	optname2 : NAME .  (37)

	.  reduce 37


state 47
	ltl : LTL optname2 . $$4 ltl_body  (29)
	$$4 : .  (28)

	.  reduce 28

	$$4  goto 69


state 48
	units : units unit .  (3)

	.  reduce 3


state 49
	proctype : PROCTYPE .  (20)

	.  reduce 20


state 50
	proctype : D_PROCTYPE .  (21)

	.  reduce 21


state 51
	proc : inst proctype . NAME $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	NAME  shift 70
	.  error


state 52
	one_decl : vis TYPE . var_list  (74)
	one_decl : vis TYPE . asgn '{' nlst '}'  (76)
	asgn : .  (72)

	NAME  shift 71
	ASGN  shift 72
	'{'  reduce 72

	asgn  goto 73
	var_list  goto 74
	ivar  goto 75
	vardcl  goto 76


state 53
	one_decl : vis UNAME . var_list  (75)

	NAME  shift 71
	.  error

	var_list  goto 77
	ivar  goto 75
	vardcl  goto 76


state 54
	cstate : C_STATE STRING STRING .  (48)
	cstate : C_STATE STRING STRING . STRING  (50)

	STRING  shift 78
	$end  reduce 48
	error  reduce 48
	C_CODE  reduce 48
	C_DECL  reduce 48
	C_STATE  reduce 48
	C_TRACK  reduce 48
	TYPEDEF  reduce 48
	INLINE  reduce 48
	SEMI  reduce 48
	ARROW  reduce 48
	ACTIVE  reduce 48
	PROCTYPE  reduce 48
	D_PROCTYPE  reduce 48
	HIDDEN  reduce 48
	SHOW  reduce 48
	ISLOCAL  reduce 48
	TYPE  reduce 48
	UNAME  reduce 48
	CLAIM  reduce 48
	TRACE  reduce 48
	INIT  reduce 48
	LTL  reduce 48


state 55
	cstate : C_TRACK STRING STRING .  (49)
	cstate : C_TRACK STRING STRING . STRING  (51)

	STRING  shift 79
	$end  reduce 49
	error  reduce 49
	C_CODE  reduce 49
	C_DECL  reduce 49
	C_STATE  reduce 49
	C_TRACK  reduce 49
	TYPEDEF  reduce 49
	INLINE  reduce 49
	SEMI  reduce 49
	ARROW  reduce 49
	ACTIVE  reduce 49
	PROCTYPE  reduce 49
	D_PROCTYPE  reduce 49
	HIDDEN  reduce 49
	SHOW  reduce 49
	ISLOCAL  reduce 49
	TYPE  reduce 49
	UNAME  reduce 49
	CLAIM  reduce 49
	TRACE  reduce 49
	INIT  reduce 49
	LTL  reduce 49


state 56
	utype : TYPEDEF NAME '{' . $$7 decl_lst '}'  (41)
	$$7 : .  (40)

	.  reduce 40

	$$7  goto 80


state 57
	l_par : '(' .  (15)

	.  reduce 15


state 58
	ns : INLINE nm l_par . $$8 args r_par  (45)
	$$8 : .  (44)

	.  reduce 44

	$$8  goto 81


state 59
	const_expr : CONST .  (171)

	.  reduce 171


state 60
	inst : ACTIVE '[' NAME . ']'  (25)

	']'  shift 82
	.  error


state 61
	const_expr : '-' . const_expr  (172)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 83


state 62
	const_expr : l_par . const_expr r_par  (173)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 84


state 63
	inst : ACTIVE '[' const_expr . ']'  (24)
	const_expr : const_expr . '+' const_expr  (174)
	const_expr : const_expr . '-' const_expr  (175)
	const_expr : const_expr . '*' const_expr  (176)
	const_expr : const_expr . '/' const_expr  (177)
	const_expr : const_expr . '%' const_expr  (178)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	']'  shift 90
	.  error


state 64
	claim : CLAIM optname $$5 . body  (33)

	'{'  shift 65
	.  error

	body  goto 91


state 65
	body : '{' . $$9 sequence OS $$10 '}'  (57)
	$$9 : .  (55)

	.  reduce 55

	$$9  goto 92


state 66
	events : TRACE $$6 body .  (39)

	.  reduce 39


state 67
	Opt_priority : PRIORITY . CONST  (223)

	CONST  shift 93
	.  error


state 68
	init : INIT $$3 Opt_priority . body  (27)

	'{'  shift 65
	.  error

	body  goto 94


state 69
	ltl : LTL optname2 $$4 . ltl_body  (29)

	error  shift 95
	'{'  shift 96
	.  error

	ltl_body  goto 97


state 70
	proc : inst proctype NAME . $$1 l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)
	$$1 : .  (17)

	.  reduce 17

	$$1  goto 98


state 71
	vardcl : NAME .  (92)
	vardcl : NAME . ':' CONST  (93)
	vardcl : NAME . '[' const_expr ']'  (94)
	vardcl : NAME . '[' NAME ']'  (95)

	'['  shift 99
	':'  shift 100
	$end  reduce 92
	error  reduce 92
	C_CODE  reduce 92
	C_DECL  reduce 92
	C_STATE  reduce 92
	C_TRACK  reduce 92
	TYPEDEF  reduce 92
	INLINE  reduce 92
	SEMI  reduce 92
	ARROW  reduce 92
	FI  reduce 92
	OD  reduce 92
	SEP  reduce 92
	ACTIVE  reduce 92
	PROCTYPE  reduce 92
	D_PROCTYPE  reduce 92
	HIDDEN  reduce 92
	SHOW  reduce 92
	ISLOCAL  reduce 92
	TYPE  reduce 92
	UNAME  reduce 92
	CLAIM  reduce 92
	TRACE  reduce 92
	INIT  reduce 92
	LTL  reduce 92
	ASGN  reduce 92
	')'  reduce 92
	'}'  reduce 92
	','  reduce 92


state 72
	asgn : ASGN .  (73)

	.  reduce 73


state 73
	one_decl : vis TYPE asgn . '{' nlst '}'  (76)

	'{'  shift 101
	.  error


state 74
	one_decl : vis TYPE var_list .  (74)

	.  reduce 74


state 75
	var_list : ivar .  (83)
	var_list : ivar . ',' var_list  (84)

	','  shift 102
	$end  reduce 83
	error  reduce 83
	C_CODE  reduce 83
	C_DECL  reduce 83
	C_STATE  reduce 83
	C_TRACK  reduce 83
	TYPEDEF  reduce 83
	INLINE  reduce 83
	SEMI  reduce 83
	ARROW  reduce 83
	FI  reduce 83
	OD  reduce 83
	SEP  reduce 83
	ACTIVE  reduce 83
	PROCTYPE  reduce 83
	D_PROCTYPE  reduce 83
	HIDDEN  reduce 83
	SHOW  reduce 83
	ISLOCAL  reduce 83
	TYPE  reduce 83
	UNAME  reduce 83
	CLAIM  reduce 83
	TRACE  reduce 83
	INIT  reduce 83
	LTL  reduce 83
	')'  reduce 83
	'}'  reduce 83


state 76
	ivar : vardcl .  (87)
	ivar : vardcl . ASGN '{' c_list '}'  (88)
	ivar : vardcl . ASGN expr  (89)
	ivar : vardcl . ASGN ch_init  (90)

	ASGN  shift 103
	$end  reduce 87
	error  reduce 87
	C_CODE  reduce 87
	C_DECL  reduce 87
	C_STATE  reduce 87
	C_TRACK  reduce 87
	TYPEDEF  reduce 87
	INLINE  reduce 87
	SEMI  reduce 87
	ARROW  reduce 87
	FI  reduce 87
	OD  reduce 87
	SEP  reduce 87
	ACTIVE  reduce 87
	PROCTYPE  reduce 87
	D_PROCTYPE  reduce 87
	HIDDEN  reduce 87
	SHOW  reduce 87
	ISLOCAL  reduce 87
	TYPE  reduce 87
	UNAME  reduce 87
	CLAIM  reduce 87
	TRACE  reduce 87
	INIT  reduce 87
	LTL  reduce 87
	')'  reduce 87
	'}'  reduce 87
	','  reduce 87


state 77
	one_decl : vis UNAME var_list .  (75)

	.  reduce 75


state 78
	cstate : C_STATE STRING STRING STRING .  (50)

	.  reduce 50


state 79
	cstate : C_TRACK STRING STRING STRING .  (51)

	.  reduce 51


state 80
	utype : TYPEDEF NAME '{' $$7 . decl_lst '}'  (41)
	vis : .  (68)

	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	TYPE  reduce 68
	UNAME  reduce 68

	one_decl  goto 104
	decl_lst  goto 105
	vis  goto 34


state 81
	ns : INLINE nm l_par $$8 . args r_par  (45)
	args : .  (255)

	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	GET_P  shift 110
	PC_VAL  shift 111
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	CONST  shift 114
	NAME  shift 115
	PNAME  shift 116
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	')'  reduce 255

	l_par  goto 123
	args  goto 124
	cexpr  goto 125
	varref  goto 126
	expr  goto 127
	cmpnd  goto 128
	pfld  goto 129
	ltl_expr  goto 130
	arg  goto 131


state 82
	inst : ACTIVE '[' NAME ']' .  (25)

	.  reduce 25


state 83
	const_expr : '-' const_expr .  (172)
	const_expr : const_expr . '+' const_expr  (174)
	const_expr : const_expr . '-' const_expr  (175)
	const_expr : const_expr . '*' const_expr  (176)
	const_expr : const_expr . '/' const_expr  (177)
	const_expr : const_expr . '%' const_expr  (178)

	.  reduce 172


state 84
	const_expr : l_par const_expr . r_par  (173)
	const_expr : const_expr . '+' const_expr  (174)
	const_expr : const_expr . '-' const_expr  (175)
	const_expr : const_expr . '*' const_expr  (176)
	const_expr : const_expr . '/' const_expr  (177)
	const_expr : const_expr . '%' const_expr  (178)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	')'  shift 132
	.  error

	r_par  goto 133


state 85
	const_expr : const_expr '+' . const_expr  (174)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 134


state 86
	const_expr : const_expr '-' . const_expr  (175)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 135


state 87
	const_expr : const_expr '*' . const_expr  (176)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 136


state 88
	const_expr : const_expr '/' . const_expr  (177)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 137


state 89
	const_expr : const_expr '%' . const_expr  (178)

	CONST  shift 59
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 138


state 90
	inst : ACTIVE '[' const_expr ']' .  (24)

	.  reduce 24


state 91
	claim : CLAIM optname $$5 body .  (33)

	.  reduce 33


state 92
	body : '{' $$9 . sequence OS $$10 '}'  (57)
	vis : .  (68)

	error  shift 139
	ASSERT  shift 140
	PRINT  shift 141
	PRINTM  shift 142
	C_CODE  shift 2
	C_DECL  shift 3
	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	SET_P  shift 143
	GET_P  shift 110
	PC_VAL  shift 111
	RETURN  shift 144
	GOTO  shift 145
	BREAK  shift 146
	ELSE  shift 147
	IF  shift 148
	DO  shift 149
	FOR  shift 150
	SELECT  shift 151
	ATOMIC  shift 152
	D_STEP  shift 153
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	HIDDEN  shift 11
	SHOW  shift 12
	ISLOCAL  shift 13
	FULL  shift 154
	EMPTY  shift 155
	NFULL  shift 156
	NEMPTY  shift 157
	CONST  shift 114
	XU  shift 158
	NAME  shift 159
	PNAME  shift 116
	INAME  shift 160
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	'{'  shift 161
	TYPE  reduce 68
	UNAME  reduce 68

	one_decl  goto 162
	l_par  goto 163
	full_expr  goto 164
	ccode  goto 165
	cexpr  goto 125
	sequence  goto 166
	step  goto 167
	stmnt  goto 168
	vis  goto 34
	varref  goto 169
	expr  goto 170
	cmpnd  goto 128
	pfld  goto 129
	Special  goto 171
	Stmnt  goto 172
	for_pre  goto 173
	ltl_expr  goto 130
	Expr  goto 174
	Probe  goto 175


state 93
	Opt_priority : PRIORITY CONST .  (223)

	.  reduce 223


state 94
	init : INIT $$3 Opt_priority body .  (27)

	.  reduce 27


state 95
	ltl_body : error .  (31)

	.  reduce 31


state 96
	ltl_body : '{' . full_expr OS '}'  (30)

	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	GET_P  shift 110
	PC_VAL  shift 111
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	FULL  shift 154
	EMPTY  shift 155
	NFULL  shift 156
	NEMPTY  shift 157
	CONST  shift 114
	NAME  shift 115
	PNAME  shift 116
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	.  error

	l_par  goto 163
	full_expr  goto 176
	cexpr  goto 125
	varref  goto 126
	expr  goto 170
	cmpnd  goto 128
	pfld  goto 129
	ltl_expr  goto 130
	Expr  goto 174
	Probe  goto 175


state 97
	ltl : LTL optname2 $$4 ltl_body .  (29)

	.  reduce 29


state 98
	proc : inst proctype NAME $$1 . l_par decl r_par $$2 Opt_priority Opt_enabler body  (19)

	'('  shift 57
	.  error

	l_par  goto 177


state 99
	vardcl : NAME '[' . const_expr ']'  (94)
	vardcl : NAME '[' . NAME ']'  (95)

	CONST  shift 59
	NAME  shift 178
	'-'  shift 61
	'('  shift 57
	.  error

	l_par  goto 62
	const_expr  goto 179


state 100
	vardcl : NAME ':' . CONST  (93)

	CONST  shift 180
	.  error


state 101
	one_decl : vis TYPE asgn '{' . nlst '}'  (76)

	NAME  shift 181
	.  error

	nlst  goto 182


state 102
	var_list : ivar ',' . var_list  (84)

	NAME  shift 71
	.  error

	var_list  goto 183
	ivar  goto 75
	vardcl  goto 76


state 103
	ivar : vardcl ASGN . '{' c_list '}'  (88)
	ivar : vardcl ASGN . expr  (89)
	ivar : vardcl ASGN . ch_init  (90)

	C_EXPR  shift 106
	RUN  shift 107
	LEN  shift 108
	ENABLED  shift 109
	GET_P  shift 110
	PC_VAL  shift 111
	TIMEOUT  shift 112
	NONPROGRESS  shift 113
	CONST  shift 114
	NAME  shift 115
	PNAME  shift 116
	SND  shift 117
	ALWAYS  shift 118
	EVENTUALLY  shift 119
	NEXT  shift 120
	'-'  shift 121
	'~'  shift 122
	'('  shift 57
	'['  shift 184
	'{'  shift 185
	.  error

	l_par  goto 123
	cexpr  goto 125
	varref  goto 126
	expr  goto 186
	ch_init  goto 187
	cmpnd  goto 128
	pfld  goto 129
	ltl_expr  goto 130


state 104
	decl_lst : one_decl .  (77)
	decl_lst : one_decl . SEMI decl_lst  (78)

	SEMI  shift 188
	')'  reduce 77
	'}'  reduce 77


state 105
	utype : TYPEDEF NAME '{' $$7 decl_lst . '}'  (41)

	'}'  shift 189
	.  error


state 106
	cexpr : C_EXPR .  (54)

	.  reduce 54


state 107
	expr : RUN . aname $$33 l_par args r_par Opt_priority  (203)

	NAME  shift 190
	PNAME  shift 191
	.  error

	aname  goto 192


state 108
	expr : LEN . l_par varref r_par  (204)

	'('  shift 57
	.  error

	l_par  goto 193


state 109
	expr : ENABLED . l_par expr r_par  (205)

	'('  shift 57
	.  error

	l_par  goto 194


state 110
	expr : GET_P . l_par expr r_par  (206)

	'('  shift 57
	.  error

	l_par  goto 195


state 111
	expr : PC_VAL . l_par expr r_par  (216)

	'('  shift 57
	.  error

	l_par  goto 196


state 112
	expr : TIMEOUT .  (214)

	.  reduce 214


state 113
	expr : NONPROGRESS .  (215)

	.  reduce 215


state 114
	expr : CONST .  (213)

	.  reduce 213


state 115
	pfld : NAME .  (97)
	pfld : NAME . $$12 '[' expr ']'  (99)
	$$12 : .  (98)
